<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Campus Connect</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">LOGIN</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_sub_text"> </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="save_login">Remember me</string>
    <string name="forgot_password">forgot_password</string>
    <string name="sign_up">Don\'t have an account? Sign Up</string>
    <string name="register">REGISTER</string>
    <string name="firstname">Firstname</string>
    <string name="middlename">Middlename</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="year">Year of Study</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="register_account">Register</string>
    <string name="school_name">MIDDLEMORE SECONDARY SCHOOL</string>
    <string name="company_name">Richard INC.</string>
    <string name="from">from</string>
    <string name="register_tagline">Register an account to see what\nyour friends are upto!!</string>
    <string name="register_warning">Use correct information and your school email</string>
    <string name="register_account_next">Next</string>
    <string name="password_confirm">Confirm Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment\nHello blank fragment\nHello blank fragment\nHello blank fragment\nHello blank fragment</string>
    <string name="back">Back</string>
    <string name="btmHome">Home</string>
    <string name="btmChat">Chat</string>
    <string name="btmPost">Post</string>
    <string name="btmGroups">Groups</string>
    <string name="btmAccount">Account</string>
    <string name="choose">Choose</string>
    <string name="post">Post</string>
    <string name="poll">Poll</string>
    <string name="new_post">New Post</string>
    <string name="post_caption">Write caption here...</string>
    <string name="logout">Logout</string>
    <string name="postInstructions">Tap on the image selector to pick an image.\nLongpress for moreOptions</string>
    <string name="comments">Comments</string>
    <string name="edtComment">Enter your comment</string>
    <string name="delete">Delete</string>
    <string name="delete_warning">Warning!! this action will completely remove the student and will lose all data about the student.</string>
    <string name="search_box">Search User</string>
    <string name="delete_student">delete student</string>
    <string name="update">Update</string>
    <string name="generate">generate</string>
    <string name="update_password">update password</string>
    <string name="update_user">username or email</string>
    <string name="update_info">Update info</string>
    <string name="clear_page">" clear page "</string>
    <string name="new_posts">New Posts</string>
    <string name="posts_awaiting_approval">Posts awaiting approval\n</string>
    <string name="declined_posts">Declined Posts</string>
    <string name="posts_that_were_declined_or_removed">Posts that were \n declined or removed</string>
    <string name="admin_options">Admin Options</string>
    <string name="post_to_approve">POSTS TO APPROVE</string>
    <string name="analytics">Analytics</string>
    <string name="likes">LIKES:</string>
    <string name="dislike">DISLIKE:</string>
    <string name="refresh_data">Refresh Data</string>
    <string name="likness_of_the_post">Likness of the post:</string>
    <string name="refresh_to_view_the_latest">Refresh to view the latest</string>
    <string name="enter_password_or_generate">Enter password or Generate</string>
    <string name="copy">copy</string>


</resources>