<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/post_drawer_bg"
    android:orientation="vertical"

    android:paddingTop="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="60dp"
            android:layout_height="8dp"
            android:background="@drawable/dashboard_box_bg"
            android:backgroundTint="@color/dark_grey"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/update_password"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="?attr/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtUpdateStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/update_user"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnUpdateSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_box"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llUpdatePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtUpdateFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Full Name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtUpdateEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtUpdateDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dateofbirth"
            android:textSize="18sp" />
    </LinearLayout>


    <EditText
        android:id="@+id/edtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/enter_password_or_generate" />

    <Button
        android:id="@+id/btnGeneratePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/generate" />

    <Button
        android:id="@+id/btnCopyPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/copy"
        android:visibility="gone"/>


    <Button
        android:id="@+id/btnUpdatePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/update" />


</LinearLayout>