<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/post_drawer_bg"
    android:paddingTop="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dspChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/delete"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="?attr/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_warning"
        android:padding="16dp"
        android:textSize="18sp"
        android:textColor="@color/red"/>

    <EditText
        android:id="@+id/edtDeleteStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/update_user"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnDeleteSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_box"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llDeleteDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDeleteFullName"
            android:text="Full Name"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDeleteEmail"
            android:text="Email"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDeleteDOB"
            android:text="@string/dateofbirth"
            android:textSize="18sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnDeleteStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_student"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>




</LinearLayout>