<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".BootActivity"
    android:fitsSystemWindows="true">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:gravity="center"
            android:shadowColor="@color/shadow"
            android:shadowDx="10"
            android:shadowDy="5"
            android:shadowRadius="50"
            android:text="@string/app_name"
            android:textColor="@color/my_primary"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:paddingBottom="70dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:layout_marginBottom="-5dp"
        android:alpha="0.7"
        android:text="@string/from"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:textColor="@color/my_secondary"
        android:shadowColor="@color/black"
        android:alpha="0.8"
        android:text="@string/school_name"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />


</RelativeLayout>